// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SIcon.vue color "blue" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-blue">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "gold" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-gold">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "green" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-green">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "grey" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-grey">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "ice" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-ice">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "magenta" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-magenta">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "night" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-night">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "red" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-red">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "turquoise" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-turquoise">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue color "white" can be the base color 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-white">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue renders correctly 1`] = `
<svg viewBox="0 0 24 24" class="icon">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue size can be "large" 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--size-large">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue size can be "regular" 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--size-regular">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue size can be "small" 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--size-small">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;
